Remove coverage generation from npm test call to reduce times it takes to run unit tests

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Peer Recognition system written with CQRS and Event Sourcing",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage",
-    "test:watch": "jest --coverage --watchAll",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
     "build": "tsc",
     "build:watch": "onchange 'src/**/*.ts' -- npm run build",
     "view:coverage": "serve coverage/lcov-report",
